#INCLUDE("${PROJECT_SOURCE_DIR}/CMake/define_variables.cmake")
set(SRC_FILES "")
file(GLOB CPP_FILES "*.cpp")


include_directories(${FAUST_PALM4MSA_CU_SRC_DIR} ${FAUST_MATRIX_CU_SRC_DIR} ${FAUST_EXCEPTION_SRC_DIR} ${FAUST_EIGEN_SRC_DIR} ${CUDA_INC_DIR} ${CUDA_RUNTIME_API_INC_DIR} ${CUSPARSE_INC_DIR} ${CUBLAS_V2_INC_DIR})

#-D__COMPILE_TIMERS__
if(UNIX) # AND FAUST_USE_MKL
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
elseif(WIN32 AND FAUST_USE_MKL)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")
endif()

#add_definitions(-D__COMPILE_GPU__ -D__COMPILE_SPMAT__)
add_library(${FAUST_PALM4MSA_CU_TARGET} OBJECT ${CPP_FILES})

#target_link_libraries(${FAUST_PALM4MSA_CU_TARGET} ${FAUST_MATRIX_CU_TARGET} ${FAUST_EXCEPTION_TARGET})

