#INCLUDE("${PROJECT_SOURCE_DIR}/CMake/define_variables.cmake")

file(GLOB CPP_FILES "*.cpp" "${FAUST_ALGORITHM_CONSTRAINT_SRC_DIR}/*.cpp" "${FAUST_LINEAR_OPERATOR_CPU_SRC_DIR}/*.cpp")
file(GLOB HPP_FILES "${FAUST_ALGORITHM_CONSTRAINT_SRC_DIR}/*.hpp" "${FAUST_LINEAR_OPERATOR_CPU_SRC_DIR}/*.hpp")

if(NOT FAUST_TORCH)
	list(REMOVE_ITEM CPP_FILES "${FAUST_LINEAR_OPERATOR_CPU_SRC_DIR}/faust_torch.cpp")
endif()


if(USE_GPU_MOD)
	file(GLOB GPU_MOD_BUILD_DIR "${GPU_MOD_INCLUDE_DIR}/../build*")
	list(GET GPU_MOD_BUILD_DIR 0 GPU_MOD_BUILD_DIR)
	include_directories(${GPU_MOD_INCLUDE_DIR} ${GPU_MOD_BUILD_DIR})
	include_directories(${FAUST_SRC_LINEAR_OPERATOR_GPU2_DIR})
endif()
include_directories(${FAUST_SRC_LINEAR_OPERATOR_DIR} ${FAUST_LINEAR_OPERATOR_CPU_SRC_DIR} ${FAUST_ALGORITHM_CONSTRAINT_SRC_DIR} ${FAUST_ALGORITHM_FACTORIZATION_SRC_DIR} ${FAUST_UTILS_SRC_DIR} ${EIGEN_INC_DIR})

if (BUILD_USE_SINGLEPRECISION)
	set(FAUST_SINGLE "1")
endif()

if (BUILD_USE_PROFILING)
	set(__COMPILE_TIMERS__ "1")
endif()

if (BUILD_VERBOSE)
	set(FAUST_VERBOSE "1")
endif()

configure_file(${FAUST_SRC_LINEAR_OPERATOR_DIR}/faust_constant.h.in ${FAUST_SRC_LINEAR_OPERATOR_DIR}/faust_constant.h @ONLY)

add_library(${FAUST_LINEAR_OPERATOR_TARGET} OBJECT ${CPP_FILES} ${HPP_FILES})

target_compile_definitions(${FAUST_LINEAR_OPERATOR_TARGET} PRIVATE NOMINMAX)






